# gateway

./: Cargo.toml  Dockerfile
src/: main.rs
src/application/: mod.rs  state.rs
src/application/services/: auth.rs  error.rs  mod.rs  storage.rs  users.rs
src/domain/: mod.rs
src/domain/dto/auth/: credentials.rs  mod.rs  token.rs  token_state.rs
src/domain/dto/storage/: file.rs  filenames.rs  mod.rs  path.rs
src/domain/dto/users/: mod.rs  user_id.rs
src/domain/interfaces/: auth.rs  mod.rs  storage.rs  users.rs
src/domain/models/: mod.rs  role.rs  user.rs
src/handlers/: error.rs  mod.rs
src/handlers/auth/: error.rs  login.rs  mod.rs  refresh.rs  register.rs
src/handlers/middlewares/: mod.rs  validate_token.rs
src/handlers/storage/: delete.rs  get_file.rs  mod.rs  put_file.rs
src/handlers/users/: change_password.rs  delete.rs  mod.rs
src/handlers/users/files/: attach_file.rs  detach_file.rs  get_filenames.rs  mod.rs
