[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
axum = "0.7.9"
dotenvy = "0.15.7"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.11.0", features = ["v4", "serde", "fast-rng"] }
reqwest = { version = "0.12.9", features = ["json"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing-subscriber = "0.3.19"
